--- a/style.css
+++ b/style.css
@@ -6,39 +6,42 @@ body{
     width: 20%;
 }
 .cabeçalho{
-   background-color: #383D58;
-   color: white;
-   display: flex;
-   justify-content: space-around;
-   padding: 24px 0;
+    background-color: #383D58;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    padding: 24px 0;
 }
-  .cabeçalho-lista-item{
+.cabeçalho-lista-item{
     display: inline-block;
     margin: 0 16px;
     padding: 24px 0;
     font-size: 24px;
-  }
-  *{
+}
+*{
     margin: 0;
     padding: 0;
-  }
-  .escola-imagem{
+}
+.escola-imagem{
     width: 25%;
-  }
-  .escola{
-    background-image: linear-gradient(#383d58, #00c0eb);
+}
+.escola{
+    background-image: linear-gradient(#383d58,#00c0eb);
     color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 24px 0;
-  }
-  .escola-titulo{
+}
+.escola-titulo{
     padding: 24px 0;
-  }
-  .escola-conteudo{
+}
+.escola-conteudo{
     width: 35%;
-  }
-  body{
-    font-family: 'poppins',sans-serif;
-  }
+}
+body{
+    font-family:"poppins",sans-serif;
+}
+.estudante-imagem{
+    width: 120px;
+}
