--- a/style.css
+++ b/style.css
@@ -50,9 +50,12 @@ body{
 }
 .estudante-div{
     text-align: center;
+}
+.estudante-titulo{
+    text-align: center;
     padding: 50px 0;
 }
 .estudante-todos{
     display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-columns: 20% 20% 20% 20%;
 }
