--- a/style.css
+++ b/style.css
@@ -59,3 +59,8 @@ body{
     display: grid;
     grid-template-columns: 20% 20% 20% 20%;
 }
+footer{
+    background-color: black;
+    padding: 15px 0;
+    text-align: center;
+}
